# astra-sentinel

./: Cargo.toml  LICENSE  README.md
rules/: rule_list.yar
signatures/: hashes.txt
src/: app.rs  engine.rs  feeds.rs  main.rs  signatures.rs  yara.rs
