[package]
name = "astra-sentinel"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = "0.29"
md-5 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
